h1. CHANGELOG

h2. 1.4.9 unreleased

* add 'responders' recipe (contributed by allen13)
* fix 'active_admin' recipe to correct typo for activeadmin-mongoid gem (contributed by Alex Kravets)
* fix 'users_page' recipe to force it to run after 'add_user' recipe

h2. 1.4.8 April 26, 2012

* improve 'extras' recipe to offer to install gem 'therubyracer' for Linux users without node.js
* fix 'html5' recipe to add gem 'therubyracer' for 'Bootstrap with Less' option

h2. 1.4.7 April 25, 2012

* improve 'html5' recipe to move flash messages into partials for application layouts
* add 'paperclip' recipe with support for mongoid and cloudfiles (contributed by merlinvn)
* add 'cloudfiles' recipe (contributed by merlinvn)
* improve 'extras' recipe to support mongoid for will_paginate (contributed by merlinvn) 
* improve 'active_admin' recipe to support mongoid (contributed by merlinvn) 
* improve 'home_page' recipe to allow use of 'slim' recipe (contributed by Guten Ye)
* improve 'omniauth' recipe to add Tumblr to the strategy list (contributed by monfresh)
* correct error when using Cucumber and Capybara recipes together (contributed by Alan Oliver)
* update gem 'mongoid' from 2.4.8 to 2.4.9
* update gem 'factory_girl_rails' from 3.1.0 to 3.2.0
* update gem 'rails-backbone' from 0.7.1 to 0.7.2
* update gem 'omniauth' from 1.0.3 to 1.1.0

h2. 1.4.6 April 11, 2012

* resolve versioning issues

h2. 1.4.5 April 11, 2012

* add option for authorization with CanCan and Rolify
* add 'will-paginate' option to 'extras' recipe
* update gem 'mongoid' from 2.4.7 to 2.4.8

h2. 1.4.4 April 3, 2012

* update gem 'factory_girl_rails' from 3.0.0 to 3.1.0
* update gem 'bson_ext' from 1.6.1 to 1.6.2
* update 'devise' recipe to use Devise 2.1.0.rc when devise_invitable is selected
* tweak 'simple_form' recipe

h2. 1.4.3 April 3, 2012

* update 'add_user' and 'omniauth' recipes to fix problem generating rails3-mongoid-omniauth example
* add 'redis' recipe (contributed by Julián Porta)